# mnist-extractor

./: Cargo.toml  README.md
src/: lib.rs
