[package]
name = "mnist-extractor"
version = "0.1.0"
authors = ["aunetx <aunetx@yandex.com>"]
edition = "2018"
license = "MIT"
description = "A simple utility to extract MNIST dataset."
repository = "https://github.com/aunetx/mnist-extractor"

exclude = ["data/*", ".*"]

[dependencies]
ndarray = "*"
reqwest = "*"
libflate = "*"